Release 1.9
=============
* Official Django 3.1 support
* Official python 3.8 support
* MassUpdate: add new settings configuration `UPDATE_ACTION_IGNORED_FIELDS`. (thanks PetrKudy)
* Merge: add new settings configuration `MERGE_ACTION_IGNORED_FIELDS`. (thanks PetrKudy)


Release 1.8.1
=============
* Official Django 3.0 support


Release 1.8
=============
* MassUpdate: add new configuration `mass_update_fields`, `mass_update_exclude`, `mass_update_hints`


Release 1.7.1
=============
* Fixes #160 - Mass update error. Too many values to unpack


Release 1.7
===========
* Add Django 2.2 support
* Improves performace
* Fixes #152 - Allow protected merges
* Fixes #153 - Adminactions slow down running whole test suite
* Fixes #154 - fix a crash with Django model choices
* Fixes #157 - Mass update should really respect raw_id_fields
* Fixes #158 - Huge mass update performance fixes for large tables


Release 1.6
=================
* fixes :ghissue:`142` Updates README.rst with svg badges
* fixes :ghissue:`136` RemovedInDjango19Warning
* add official support for Django up to 2.0 and Python 3.6
* `add_to_site` now accept `include` argument
* cleaner merge interface


Release 1.5
===========
* add official support to Django 1.11 and Python 3.6
* fixes :ghissue:`116` Fixing ManyToMany merging with intermediary models. (thanks int-ua)
* fixes :ghissue:`95` Cannot merge models with subclassed ImageField or FileField: "file not sent". (thanks int-ua)
* fixes :ghissue:`108` merge doesn't account for many-to-many relationships
* fixes :ghissue:`93` Do not export dates as strings in Excel


Release 1.4
===========
* document :ghissue:`112` Undocumented feature: merge_form
* document :ghissue:`108` merge doesn't account for many-to-many relationships
* document :ghissue:`95` Cannot merge models with subclassed ImageField: "file not sent" error
* document :ghissue:`85` merge doesn't work for models related with on_delete=Protect


Release 1.3
===========fir