@@ -1,7 +1,6 @@
 [tox]
-# as per https://docs.djangoproject.com/en/1.11/faq/install/#what-python-version-can-i-use-with-django
 envlist = d{20,21,22}-py{35,36,37},
-          d{30,31}-py{36,37,38}
+          d{30,31,32}-py{36,37,38}
 
 skip_missing_interpreters = true
 
@@ -43,6 +42,7 @@ deps=
     d22: django>=2.2,<2.3
     d30: django>=3.0,<3.1
     d31: django>=3.1,<3.2
+    d32: django>=3.2,<3.3
 
     ; only for local development
     dev: git+https://github.com/django/django.git
